--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ p {
     padding-bottom: 2rem;
     font-size: 1.5rem;
 }
-.btn {
+#btn {
     position: absolute;
     bottom: -10%;
     left: 46%;
@@ -47,14 +47,14 @@ p {
     border-radius: 50%;
 
 }
-.btn:hover {
+#btn:hover {
     background-color: hsl(193, 38%, 86%);
 }
 @media screen and (max-width: 600px) {
     .container {
         width: 80%;
     }
-    .btn {
+    #btn {
         position: absolute;
         bottom: -10%;
         left: 44%;
